# kyros

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE_AGENT_README.md  CONTEXT_PASSING_GUIDE.md  CONVERSATION_ANALYSIS_README.md  Dockerfile  IMPLEMENTATION_NOTES.md  INTERNLM_SETUP.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SETUP.md  TERMINAL_UI_README.md  VERIFICATION_SYSTEM.md  action_execution.py  action_verification.py  add_conversation_to_couchbase.py  agent.py  claude_code_agent.py  claude_code_web_server.py  client.py  config.py  config.yaml  context.py  conversation_analysis_agent.py  cursor_overlay.py  demo_claude_agent.py  demo_conversation_analysis.py  desktop_observation.py  docker-compose.yml  draw_bbox.py  entrypoint.sh  example_learn_feedback.py  example_plan_refinement.py  example_plan_to_code.py  example_text_plans.py  example_usage.py  (+65 more)
agents/: base_agent.py  boss_agent.py  browser_action_agent.py  browser_agent_legacy.py  browser_boss_agent.py  gui_agent.py  research_agent.py  shell_agent.py  xpath_agent.py
autoglm/: __init__.py  agent.py  example.py
autoglm/prompt/: __init__.py  accessibility_tree_handle.py  deduplicate_node.py  grounding_agent.py  procedural_memory.py
context/: README.md  context.txt  example_client.py  http_agent.py  requirements.txt
conversations/: complex456.json  demo123.json
src/: App.tsx  api.ts  index.css  types.ts
src/components/: ChatContainer.tsx  Header.tsx  Message.tsx  Sidebar.tsx  TaskGraph.tsx  TaskNodeComponent.tsx  TaskOutputPanel.tsx  TaskViewer.tsx
src/hooks/: useSession.ts
templates/: index.html
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
v2/: README.md  agent_v2.py  create_search_index.py  demo_agent_v2.py  demo_local.py  interactive_couchbase_test.py  rag_usage_examples.md  sample_plan.txt  start_agent_v2.py  test_agent_v2.py  test_code_execution.py  test_couchbase_connection.py  test_rag.py  test_server_start.py  test_session_persistence.py  test_simple_execution.py  test_startup.py
v3/: __init__.py  agent.py  api.py  config.py  services.py  state.py  test_langgraph_planner.py  test_modular_agent.py  test_supervised_agent.py  workflow_nodes.py
v3/frontend/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
v3/frontend/src/: App.css  App.tsx
v3/frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ConnectionStatus.tsx  FeedbackForm.tsx
v3/frontend/src/hooks/: useWebSocket.ts
v3/frontend/src/services/: WebSocketService.ts
v3/frontend/src/types/: index.ts
